# bark-to-game

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/bark_to_game/: __init__.py  main.py  paths.py  settings.py
backend/bark_to_game/audio/: __init__.py  classify.py  features.py  pipeline.py  segmentation.py  tokens.py  yamnet.py
backend/bark_to_game/generate/: __init__.py  _api_backend.py  _common.py  _sdk_backend.py  generator.py  jobs.py  maintenance.py  playbook.py
backend/bark_to_game/history/: __init__.py  manager.py
backend/bark_to_game/routes/: audio.py  concept.py  game.py  history.py  session.py
backend/bark_to_game/schemas/: __init__.py  audio.py  concept.py  game.py  history.py  session.py
backend/bark_to_game/sessions/: __init__.py  manager.py
backend/bark_to_game/translate/: __init__.py  archive.py  engine.py  prompts.py  recipes.py  style_cards.py
backend/tests/: conftest.py  test_api_backend.py  test_audio_accuracy.py  test_audio_pipeline.py  test_audio_route.py  test_audio_to_params.py  test_claude_md_builder.py  test_concept_route.py  test_game_route.py  test_game_stream.py  test_generate_playbook.py  test_generator_prompt_contract.py  test_generator_resilience.py  test_history.py  test_main.py  test_maintenance.py  test_sessions.py  test_sessions_orphan_recovery.py  test_strict_bark_detection.py  test_style_cards.py  test_translate_api.py  test_translate_archive.py  test_translate_engine.py  test_translate_prompt_assembly.py
deploy/nginx/: bark-to-game-fullstack.conf  bark-to-game.conf  zhangrg-bark.conf  zhangrg-mingji.conf
deploy/systemd/: bark-to-cloudflared.service  bark-to-game.service
docs/: ARCHITECTURE.md  PLAN.md  REFERENCES.md
douyin-bundle/: README.md  index.html
douyin-bundle/games/: concrete-verdict.html
douyin-bundle/works/: bark-scrambler-9000.html  concrete-verdict.html  falling-frequency.html  plumb.html  ribbon-parade.html  schematics-rain-down.html  signal-decay.html  tumblecroft-fair.html
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.routing.test.tsx  App.test.tsx  App.tsx  GamePage.test.tsx  GamePage.tsx  WorksPage.tsx  index.css  main.tsx
game-template/: README.md  index.html  package.json  pnpm-lock.yaml
game-template/vite/: config.dev.mjs  config.prod.mjs
game_assets/: playbook.md
scripts/: build-douyin-bundle.sh  deploy-fullstack.sh  deploy-static.sh  scrub-works.py
style_cards/: art_styles.json  mechanics.json  moods.json
visual_recipes/: recipe_glitch_y2k.md  recipe_handdrawn_sketch.md  recipe_isometric_pastel.md  recipe_neon_noir.md  recipe_papercut_layered.md  recipe_pixel_crt.md  recipe_vector_swiss.md  recipe_watercolor_ink.md
(+25 files in other folders)
