[project]
name = "bark-to-game-backend"
version = "0.1.0"
description = "Audio analysis and game generation backend for bark-to-game"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.115",
    "loguru>=0.7",
    "librosa>=0.10",
    "numpy>=1.26",
    "soundfile>=0.12",
    "tensorflow>=2.18",
    "tensorflow-hub>=0.16",
    "tf-keras>=2.18",
    # tensorflow_hub uses pkg_resources internally. Python 3.13 no longer
    # ships setuptools by default, AND setuptools >= 81 stopped vendoring
    # pkg_resources by default — pinning < 81 keeps the import path alive.
    "setuptools>=75,<81",
    "claude-agent-sdk>=0.2.82",
    # Used by cancel_job to walk the child process tree and SIGKILL any
    # SDK subprocess the asyncio cleanup chain failed to terminate.
    "psutil>=5.9",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2",
    "types-psutil>=7.2.2.20260508",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bark_to_game"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use class-level mutable attrs (e.g. fixture lists/dicts)
# and shadowing inner classes for parametrisation.
"tests/*" = ["B", "RUF012", "F811"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
